--- a/README.asciidoc
+++ b/README.asciidoc
@@ -533,35 +533,38 @@ high-availability failover for the Master Nagios.
          |              
          | check results
          |
-    ~~~~~|~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-         |                                / 
-         |                     NOC        \                       Another DC
-         V                                 \
-    ____________________________ IP x      /
-                                          /
-              _.-----._                  /
-            .- shared  -.               /
-            |-_ disk  _-|               \
-            `._~-----~_.'                \
-              |"-----"|                   \
-              |       X                   /
-    +----------+    +----------+         /
-    | Master   |    | Failover |        /
-    | Nagios   |----| Partner  |        \
-    |          |    |          |         \
-    +----------+    +----------+         /
-    ____________________________ IP x   /
-        ^   ^                          /                 
-      check results                   /                                       
-        |   '-------------.           \                
-        |                 |            \
-        |  +---------+    |            /                 +---------+
-        |  | Slave   |    |           /                  | Slave   |
-        '--| Nagios  |    '-<-------------------<--------| Nagios  |
-           |         |              /                    |         |
-           +---------+              \                    +---------+
+    ~~~~~|~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+         |
+         |                     MAIN DC
+         V 
+    ____________________________ IP x
+
+              _.-----._
+            .- shared  -.
+            |-_ disk  _-|
+            `._~-----~_.'
+              |"-----"|
+              |       X
+    +----------+    +----------+
+    | Master   |    | Failover |
+    | Nagios   |----| Partner  |
+    |          |    |          |
+    +----------+    +----------+
+    ____________________________ IP x
+        ^
+   check results
+        |
+        |
+        |  +---------+
+        |  | Worker  |
+        '--| Nagios  |
+           |         |
+           +---------+
+
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
    IP x - An IP address for use by the Master or Failover
+
 ----
 
 TODO
