--- a/README.asciidoc
+++ b/README.asciidoc
@@ -569,8 +569,170 @@ high-availability failover for the Master Nagios.
 
 TODO
 
-Building the Worker Nagios
-^^^^^^^^^^^^^^^^^^^^^^^^^^
+Building the Worker Nagios (Redhat/Centos 5)
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+TODO - incomplete...
+
+Consists of five main steps:
+
+1. Install software
+2. Test the installed software
+3. Configure Apache
+4. Configure the system
+
+1. Install software
+
+Set up Yum to use the EPEL and smorg repositories:
+
+----
+wget -O - http://www.smorg.co.uk/repo/stable/rhel5/smorg.repo > /etc/yum.repos.d/smorg.repo
+rpm -ivh http://mirror.bytemark.co.uk/fedora/epel/5/i386/epel-release-5-4.noarch.rpm
+----
+
+Log on to the new nagios virtual machine and install the software.
+
+----
+ssh user@$NEWSERVER
+sudo su -
+yum install nagrestconf smorg-gearmand-server mod_gearman nagios-www \
+            smorg-nagios-plugins smorg-nagios-plugins-extra \
+            smorg-nrpe smorg-nrpe-plugin MySQL-shared-compat
+----
+
+2. Test the Installed Software
+
+Don't skip this step as it also sets up some files ready for the `real' install later on.
+
+Make a brand new nagios configuration using the nagrestconf sample.
+
+----
+cd /etc/
+mv nagios/ nagios.dist
+cp -a /usr/share/doc/nagrestconf-1*/initial-config/ nagios
+nagrestconf_install -a
+slc_configure --folder=local
+----
+
+Create a simple test configuration using REST from the example in the nagrestconf docs.
+
+----
+bash /usr/share/doc/nagrestconf-1.*/bulk-loading/REST_setup_local.sh
+----
+
+Add a nagiosadmin user with password set to nagiosadmin. This is just for testing.
+
+----
+htpasswd -bc /etc/nagios/htpasswd.users nagiosadmin nagiosadmin
+----
+
+And now allow anyone to connect without authenticating.
+
+----
+sed -i 's/\([[:space:]]*\)\(Allow from .*\)/\1#\2\n\1Allow from all/' /etc/httpd/conf.d/nagrestconf.conf
+/etc/init.d/httpd restart
+----
+
+Connect to \http://NEWSERVER/nagrestconf/ using a Web Browser and the nagrestconf GUI should be shown with two server entries and a fully working test configuration.
+
+Connect to \http://NEWSERVER/nagios and check that it works, using the user nagiosadmin with password nagiosadmin.
+
+Once nagios and nagrestconf are verified working continue to the next section.
+
+3. Configure Apache
+
+This is an example HTTP daemon configuration to restrict access to secure
+HTTP with Basic authentication only.
+
+----
+cat >/etc/httpd/conf.d/nagios.conf <<EnD
+ScriptAlias /nagios/cgi-bin "/usr/lib64/nagios/cgi"
+
+<Directory "/usr/lib64/nagios/cgi">
+   SSLRequireSSL
+   Options ExecCGI
+   AllowOverride None
+   Order allow,deny
+   Allow from all
+#  Order deny,allow
+#  Deny from all
+#  Allow from 127.0.0.1
+   AuthName "Nagios Access"
+   AuthType Basic
+   AuthUserFile /etc/nagios/htpasswd.users
+   Require valid-user
+</Directory>
+
+Alias /nagios "/usr/share/nagios"
+
+<Directory "/usr/share/nagios">
+   SSLRequireSSL
+   Options None
+   AllowOverride None
+   Order allow,deny
+   Allow from all
+#  Order deny,allow
+#  Deny from all
+#  Allow from 127.0.0.1
+   AuthName "Nagios Access"
+   AuthType Basic
+   AuthUserFile /etc/nagios/htpasswd.users
+   Require valid-user
+</Directory>
+EnD
+cat >/etc/httpd/conf.d/nagrestconf.conf <<EnD
+Alias /nagrestconf "/usr/share/nagrestconf/htdocs/nagrestconf"
+
+<Directory /usr/share/nagrestconf/htdocs/nagrestconf/>
+
+  SSLRequireSSL
+
+  # Only allow from the local host
+  #Order deny,allow
+  #Deny from all
+  #Allow from 127.0.0.1
+
+  AllowOverride All
+
+  # Require authentication
+  AuthName "Nagrestconf Access"
+  AuthType Basic
+  AuthUserFile /etc/nagios/nagrestconf.users
+  Require valid-user
+
+</Directory>
+EnD
+cat >/etc/httpd/conf.d/rest.conf <<EnD
+Alias /rest /usr/share/nagrestconf/htdocs/rest
+
+<Directory /usr/share/nagrestconf/htdocs/rest/>
+
+  SSLRequireSSL
+
+  # Only allow from the local host
+  #Order deny,allow
+  #Deny from all
+  #Allow from 127.0.0.1
+
+  AllowOverride All
+
+  # Require authentication
+  AuthName "REST Access"
+  AuthType Basic
+  AuthUserFile /etc/nagios/rest.users
+  Require valid-user
+
+</Directory>
+EnD
+----
+
+Activate the new httpd configuration
+
+----
+/etc/init.d/httpd restart
+----
+
+4. Configure the system
 
 TODO
 
